--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Author URL: http://w3layouts.com
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:image" content="imgs/frac_exsitu.png">
+    <meta property="og:image" src="imgs/frac_exsitu.png">
     <title>Yun-Ting Cheng</title>
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css?family=Nunito:400,600,700,800,900&display=swap" rel="stylesheet">
