--- a/research.html
+++ b/research.html
@@ -84,8 +84,8 @@ Author URL: http://w3layouts.com
           <p style="font-size:10pt">Constraints on the fraction of extended emssion around galaxies from stacking analysis with CIBER.</p>
         </div>
         <div class="col-lg-7 content-left mt-lg-0 mt-5 pl-lg-5">
-          <h3>Studying Intra-Halo Light in near-IR Extragalactic Background Light</h3>
-          <p class="mb-0"><b>Cheng, Y.-T.</b> + CIBER collaboration 2020 in prep.
+          <h3>Probing Intra-Halo Light with Galaxy Stacking in CIBER Images</h3>
+          <p class="mb-0"><b>Cheng, Y.-T.</b> + CIBER collaboration 2021 in prep.
            <br><br>         
             Extragalactic Background Light (EBL) is the integrated emission from all extragalactic sources along the line of sight. Previous power spectrum analysis with CIBER data suggests that about half of the near-IR EBL photons originates from a diffuse component named "intra-halo light",  the emission from stars tidally stripped from their parent galaxies which ultimately reside in the surrounding dark matter halo with an extended spatial distribution (<a href="https://ui.adsabs.harvard.edu/abs/2014Sci...346..732Z/abstract"target="_blank">Zemcov et al. 2014</a>). In Cheng et al. 2020 in prep., we further constrain the IHL properties in CIBER imaging data using stacking analysis.
 </p>
