--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@ Author URL: http://w3layouts.com
  <div class="container py-md-3">
   <div class="heading text-center mx-auto">
     <!-- <h4 class="head">Welcome To My Page!</h4> -->
-    <p class="my-3 head" style="font-size:110%;"> Hello, I am Yun-Ting Cheng (鄭昀庭). Currently I am a physics PhD student in the <a href="https://cosmology.caltech.edu/"target="_blank">Observational Cosmology</a> group at the California Institute of Technology (Caltech). I work with my advisor <a href="https://pma.divisions.caltech.edu/people/james-j-jamie-bock"target="_blank">Jamie Bock</a> on <a href="https://ciberrocket.github.io/"target="_blank"target="_blank">CIBER</a> and <a href="https://ui.adsabs.harvard.edu/abs/2014SPIE.9153E..1WC/abstract"target="_blank">TIME</a> projects, and also collaborate with <a href="https://science.jpl.nasa.gov/people/TChang/"target="_blank">Tzu-Ching Chang</a> and <a href="http://olivierdore.net/index.html"target="_blank">Olivier Doré</a> at Caltech/JPL. Before coming to Caltech, I earned my Bachelor of Science degree in physics at the National Taiwan University (NTU).<br>
-        <br>
-    My research centered on various aspects of <b>Intensity Mapping</b>, a novel method to study the cosmic large-scale structure, epoch of reionization, and galaxy formation and evolution at the high-redshift universe. My research involves both analyzing intensity mapping data, and developing analysis techniques to extract the desired information from upcoming intensity mapping experiments.
+    <p class="my-3 head" style="font-size:110%;"> Hello, I am Yun-Ting Cheng (鄭昀庭). I am a postdoctoral researcher at the California Institute of Technology (Caltech) working with <a href="http://olivierdore.net/index.html"target="_blank">Olivier Doré</a> and <a href="https://science.jpl.nasa.gov/people/TChang/"target="_blank">Tzu-Ching Chang</a>. I completed my Ph.D. at Caltech <a href="https://cosmology.caltech.edu/"target="_blank">Observational Cosmology group</a> under the supervision of <a href="https://pma.divisions.caltech.edu/people/james-j-jamie-bock"target="_blank">Jamie Bock</a>.
+
+    <br><br>
+    My research centered on various aspects of <b>intensity mapping</b>, a novel method to study the cosmic large-scale structure, epoch of reionization, and galaxy formation and evolution at the high-redshift universe. My work involves both analyzing intensity mapping data, and developing analysis techniques to extract the desired information from upcoming intensity mapping experiments.
 </p>
       
     </div>
