--- a/publications.html
+++ b/publications.html
@@ -69,13 +69,23 @@ Author URL: http://w3layouts.com
          <div class="col-lg-12 content-left mt-lg-0 mt-5 pl-lg-5">
           <p class="mb-0">Full lists can be found on my
             <a href="https://ui.adsabs.harvard.edu/public-libraries/BpppNfF-TomoEroImynnZA"target="_blank">ADS</a>, 
-            <a href="https://scholar.google.com/citations?user=EE0Ah5YAAAAJ&hl=en"target="_blank">Google Scholar</a>, 
+            <a href="https://scholar.google.com/citations?user=EE0Ah5YAAAAJ&hl=en"target="_blank">Google Scholar</a>,  and 
             <a href="http://inspirehep.net/author/profile/Yun.Ting.Cheng.1"target="_blank">INSPIRE</a>
           <br><br>
           <h3><b>First Author</b></h3>
+          Cosmic Near-Infrared Background Tomography with SPHEREx Using Galaxy Cross-Correlations<br>
+          <b>Cheng, Y.-T.</b> & Chang, T.-C., 2021, ApJ accepted
+          (<a href="https://ui.adsabs.harvard.edu/abs/2021arXiv210910914C/abstract"target="_blank">ADS</a>, 
+          <a href="https://arxiv.org/abs/2109.10914"target="_blank">arXiv:2109.10914</a>)<br>
+          <br>
+          Probing Intra-Halo Light with Galaxy Stacking in CIBER Images<br>
+          <b>Cheng, Y.-T.</b>, et al. (CIBER collaboration), 2021, ApJ, 919, 69
+          (<a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...919...69C/abstract"target="_blank">ADS</a>, 
+          <a href="https://arxiv.org/abs/2103.03882"target="_blank">arXiv:2103.03882</a>)<br>
+          <br>
           Phase-Space Spectral Line De-confusion in Intensity Mapping<br>
           <b>Cheng, Y.-T.</b>, Chang, T.-C., & Bock, J. 2020, ApJ, 901, 142
-          (<a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200505341C/abstract"target="_blank">ADS</a>, 
+          (<a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...901..142C/abstract"target="_blank">ADS</a>, 
           <a href="https://arxiv.org/abs/2005.05341"target="_blank">arXiv:2005.05341</a>)<br>
           <br>
           Optimally Mapping Large-scale Structures with Luminous Sources<br>
@@ -88,14 +98,14 @@ Author URL: http://w3layouts.com
           (<a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...832..165C/abstract"target="_blank">ADS</a>, 
           <a href="https://arxiv.org/abs/1604.07833"target="_blank">arXiv:1604.07833</a>)<br>
           <br><br>
-          <h3><b>Contributing Author</b></h3>
-          Line-Intensity Mapping: 2017 Status Report<br>
-          Kovetz, E. D., Viero, M. P., Lidz, A., Newburgh, L., Rahman, M., Switzer, E., Kamionkowski, M., ..., <b>Cheng, Y.-T.</b>, ..., et al. 2017 (<a href="https://arxiv.org/abs/1709.09066"target="_blank">arXiv:1709.09066</a>)
+          <h3><b>Contributing Author (selected)</b></h3>
+          Superresolution Reconstruction of Severely Undersampled Point-spread Functions Using Point-source Stacking and Deconvolution<br>
+          Symons, T., Zemcov, M., ..., <b>Cheng, Y.-T.</b>, et al. 2021, ApJS, 252, 24 (<a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..252...24S/abstract"target="_blank">ADS</a>, 
+          <a href="https://arxiv.org/abs/2102.01094"target="_blank">arXiv:2102.01094</a>)
           <br><br>
-          A Foreground Masking Strategy for [C ii] Intensity Mapping Experiments Using Galaxies Selected by Stellar Mass and Redshift<br>
-          Sun, G., Moncelsi, L., Viero, M. P., Silva, M. B., Bock, J., Bradford, C. M., Chang, T.-C., <b>Cheng, Y.-T.</b>, Cooray, A. R., Crites, A., Hailey-Dunsheath, S., Uzgil, B., Hunacek, J. R. & Zemcov, M. 2018, ApJ, 856, 107
-          (<a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...856..107S/abstract"target="_blank">ADS</a>, 
-          <a href="https://arxiv.org/abs/1610.10095"target="_blank">arXiv:1610.10095</a>)<br>
+          Line-Intensity Mapping: 2017 Status Report<br>
+          Kovetz, E. D., Viero, M. P., Lidz, A., Newburgh, L., Rahman, M., Switzer, E., Kamionkowski, M., ..., <b>Cheng, Y.-T.</b>, et al. 2017 (<a href="https://arxiv.org/abs/1709.09066"target="_blank">arXiv:1709.09066</a>)
+          <br>
 
         </div>
       </div>
