--- a/research.html
+++ b/research.html
@@ -85,7 +85,9 @@ Author URL: http://w3layouts.com
         </div>
         <div class="col-lg-7 content-left mt-lg-0 mt-5 pl-lg-5">
           <h3>Probing Intra-Halo Light with Galaxy Stacking in CIBER Images</h3>
-          <p class="mb-0"><b>Cheng, Y.-T.</b> + CIBER collaboration 2021 in prep.
+          <p class="mb-0"><b>Cheng, Y.-T.</b> + CIBER collaboration 2021, ApJ, 919, 69
+            (<a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...919...69C/abstract"target="_blank">ADS</a>, 
+            <a href="https://arxiv.org/abs/2103.03882"target="_blank">arXiv:2103.03882</a>)
            <br><br>         
             Extragalactic Background Light (EBL) is the integrated emission from all extragalactic sources along the line of sight. Previous power spectrum analysis with CIBER data suggests that about half of the near-IR EBL photons originates from a diffuse component named "intra-halo light",  the emission from stars tidally stripped from their parent galaxies which ultimately reside in the surrounding dark matter halo with an extended spatial distribution (<a href="https://ui.adsabs.harvard.edu/abs/2014Sci...346..732Z/abstract"target="_blank">Zemcov et al. 2014</a>). In Cheng et al. 2020 in prep., we further constrain the IHL properties in CIBER imaging data using stacking analysis.
 </p>
