--- a/publications.html
+++ b/publications.html
@@ -73,8 +73,13 @@ Author URL: http://w3layouts.com
             <a href="http://inspirehep.net/author/profile/Yun.Ting.Cheng.1"target="_blank">INSPIRE</a>
           <br><br>
           <h3><b>First Author</b></h3>
+          Near-infrared Extragalactic Background Light Fluctuations on Nonlinear Scales<br>
+          <b>Cheng, Y.-T.</b> & Bock, J., 2022, ApJ submitted
+          (<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220713712C/abstract"target="_blank">ADS</a>, 
+          <a href="https://arxiv.org/abs/2207.13712"target="_blank">arXiv:2207.13712</a>)<br>
+          <br>
           Cosmic Near-Infrared Background Tomography with SPHEREx Using Galaxy Cross-Correlations<br>
-          <b>Cheng, Y.-T.</b> & Chang, T.-C., 2021, ApJ accepted
+          <b>Cheng, Y.-T.</b> & Chang, T.-C., 2022, ApJ, 925, 136
           (<a href="https://ui.adsabs.harvard.edu/abs/2021arXiv210910914C/abstract"target="_blank">ADS</a>, 
           <a href="https://arxiv.org/abs/2109.10914"target="_blank">arXiv:2109.10914</a>)<br>
           <br>
