--- a/research.html
+++ b/research.html
@@ -67,7 +67,11 @@ Author URL: http://w3layouts.com
     <div class="container">
       <div class="row">
          <div class="col-lg-10 content-left mt-lg-0 mt-5 pl-lg-5">
-          <p class="mb-0">My research spans a wide range of theoretical and data analysis topics on intensity mapping.</p>
+          <p class="mb-0">My research spans a wide range of theoretical and data analysis topics on large-scale structures, extragalactic background light, and line intensity mapping.<br><br>
+            My recent presentation recordings:<br>
+            Apr 2022, ASIAA Seminar, <b>Cosmology and Astrophysics from the Extragalactic Background Light</b> <a href="https://www.youtube.com/watch?v=OFgtop1wmKM"target="_blank">[video]</a><br>
+            Jun 2022, Cosmology from Home, <b>Data-Driven Cosmology from 3D Light Cones</b> <a href="https://www.youtube.com/watch?v=Mx4MZ9Z2gIg"target="_blank">[video]</a><br>
+          </p>
         </div>
       </div>
     </div>
@@ -84,12 +88,16 @@ Author URL: http://w3layouts.com
           <p style="font-size:10pt">Constraints on the fraction of extended emssion around galaxies from stacking analysis with CIBER.</p>
         </div>
         <div class="col-lg-7 content-left mt-lg-0 mt-5 pl-lg-5">
-          <h3>Probing Intra-Halo Light with Galaxy Stacking in CIBER Images</h3>
-          <p class="mb-0"><b>Cheng, Y.-T.</b> + CIBER collaboration 2021, ApJ, 919, 69
+          <h3>Probing Intra-Halo Light in the Near-infrared Extragalactic Background Light</h3>
+          <p class="mb-0">
+            <b>Cheng, Y.-T.</b>, Bock, J. 2022, ApJ submitted
+            (<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220713712C/abstract"target="_blank">ADS</a>, 
+            <a href="https://arxiv.org/abs/2207.13712"target="_blank">arXiv:2207.13712</a>)<br>
+            <b>Cheng, Y.-T.</b> + CIBER collaboration 2021, ApJ, 919, 69
             (<a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...919...69C/abstract"target="_blank">ADS</a>, 
             <a href="https://arxiv.org/abs/2103.03882"target="_blank">arXiv:2103.03882</a>)
            <br><br>         
-            Extragalactic Background Light (EBL) is the integrated emission from all extragalactic sources along the line of sight. Previous power spectrum analysis with CIBER data suggests that about half of the near-IR EBL photons originates from a diffuse component named "intra-halo light",  the emission from stars tidally stripped from their parent galaxies which ultimately reside in the surrounding dark matter halo with an extended spatial distribution (<a href="https://ui.adsabs.harvard.edu/abs/2014Sci...346..732Z/abstract"target="_blank">Zemcov et al. 2014</a>). In Cheng et al. 2020 in prep., we further constrain the IHL properties in CIBER imaging data using stacking analysis.
+            Extragalactic Background Light (EBL) is the integrated emission from all extragalactic sources along the line of sight. Previous EBL fluctuation analyses suggest that the intra-halo light (IHL) has a non-negligible contribution to the near-infrared background. IHL is the emission from stars tidally stripped from their parent galaxies which ultimately reside in the surrounding dark matter halo with an extended spatial distribution. In Cheng et al. 2021, we use stacking analysis with CIBER imaging data to contrain the IHL around normal galaxies at 0.2 < z < 0.5. In Cheng & Bock 2022, we use simulations to characterize the dependence of EBL power spectrum on nonlinear clustering scales from satellite galaxies and different IHL models.
 </p>
         </div>
       </div>
@@ -140,7 +148,7 @@ Author URL: http://w3layouts.com
             <b>Cheng, Y.-T.</b>, Chang, T.-C., Bock, J., Bradford, C. M., & Cooray, A. 2016, ApJ, 832, 165
             (<a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...832..165C/abstract"target="_blank">ADS</a>, 
             <a href="https://arxiv.org/abs/1604.07833"target="_blank">arXiv:1604.07833</a>)<br>
-            <b>Cheng, Y.-T.</b>, Chang, T.-C., & Bock, J. 2020, ApJ, 901, xx
+            <b>Cheng, Y.-T.</b>, Chang, T.-C., & Bock, J. 2020, ApJ, 901, 142
             (<a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200505341C/abstract"target="_blank">ADS</a>, 
             <a href="https://arxiv.org/abs/2005.05341"target="_blank">arXiv:2005.05341</a>)
 
