--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@ Author URL: http://w3layouts.com
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="experiments.html">Experiments</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="research.html">Research</a>
           </li>
           <li class="nav-item">
@@ -83,7 +80,7 @@ Author URL: http://w3layouts.com
     <p class="my-3 head" style="font-size:110%;"> Hello, I am Yun-Ting Cheng (鄭昀庭). I am a postdoctoral researcher at the California Institute of Technology (Caltech) working with <a href="http://olivierdore.net/index.html"target="_blank">Olivier Doré</a> and <a href="https://science.jpl.nasa.gov/people/TChang/"target="_blank">Tzu-Ching Chang</a>. I completed my Ph.D. at Caltech <a href="https://cosmology.caltech.edu/"target="_blank">Observational Cosmology group</a> under the supervision of <a href="https://pma.divisions.caltech.edu/people/james-j-jamie-bock"target="_blank">Jamie Bock</a>.
 
     <br><br>
-    My research centered on various aspects of <b>intensity mapping</b>, a novel method to study the cosmic large-scale structure, epoch of reionization, and galaxy formation and evolution at the high-redshift universe. My work involves both analyzing intensity mapping data, and developing analysis techniques to extract the desired information from upcoming intensity mapping experiments.
+    My research focues on building models and developing novel techniques to improve analysis for future LSS/LIM experiments. I have worked on topics including large-scale structures (LSS), extragalactic background light (EBL), intra-halo light (IHL), and line intensity mapping (LIM). I also have data analysis experience with CIBER where I developed the analysis pipeline and study the IHL constraints from CIBER data.
 </p>
       
     </div>
