--- a/publications.html
+++ b/publications.html
@@ -38,9 +38,6 @@ Author URL: http://w3layouts.com
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="experiments.html">Experiments</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="research.html">Research</a>
           </li>
             <a class="nav-link" href="publications.html">Publications</a>
@@ -67,51 +64,43 @@ Author URL: http://w3layouts.com
     <div class="container">
       <div class="row">
          <div class="col-lg-12 content-left mt-lg-0 mt-5 pl-lg-5">
-          <p class="mb-0">Full lists can be found on my
+          <p class="mb-0">Only first author papers are listed here, please find my full list of publications on my <a href="https://yuntingcheng.github.io/YunTingCheng_cv.pdf"target="_blank">CV</a>, 
             <a href="https://ui.adsabs.harvard.edu/public-libraries/BpppNfF-TomoEroImynnZA"target="_blank">ADS</a>, 
             <a href="https://scholar.google.com/citations?user=EE0Ah5YAAAAJ&hl=en"target="_blank">Google Scholar</a>,  and 
             <a href="http://inspirehep.net/author/profile/Yun.Ting.Cheng.1"target="_blank">INSPIRE</a>
           <br><br>
-          <h3><b>First Author</b></h3>
-          Near-infrared Extragalactic Background Light Fluctuations on Nonlinear Scales<br>
+          <h3><b>First Author Papers</b></h3>
+          <br>
+          <h5>Near-infrared Extragalactic Background Light Fluctuations on Nonlinear Scales</h5>
           <b>Cheng, Y.-T.</b> & Bock, J., 2022, ApJ submitted
           (<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220713712C/abstract"target="_blank">ADS</a>, 
           <a href="https://arxiv.org/abs/2207.13712"target="_blank">arXiv:2207.13712</a>)<br>
           <br>
-          Cosmic Near-Infrared Background Tomography with SPHEREx Using Galaxy Cross-Correlations<br>
+          <h5>Cosmic Near-Infrared Background Tomography with SPHEREx Using Galaxy Cross-Correlations</h5>
           <b>Cheng, Y.-T.</b> & Chang, T.-C., 2022, ApJ, 925, 136
           (<a href="https://ui.adsabs.harvard.edu/abs/2021arXiv210910914C/abstract"target="_blank">ADS</a>, 
           <a href="https://arxiv.org/abs/2109.10914"target="_blank">arXiv:2109.10914</a>)<br>
           <br>
-          Probing Intra-Halo Light with Galaxy Stacking in CIBER Images<br>
+          <h5>Probing Intra-Halo Light with Galaxy Stacking in CIBER Images</h5>
           <b>Cheng, Y.-T.</b>, et al. (CIBER collaboration), 2021, ApJ, 919, 69
           (<a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...919...69C/abstract"target="_blank">ADS</a>, 
           <a href="https://arxiv.org/abs/2103.03882"target="_blank">arXiv:2103.03882</a>)<br>
           <br>
-          Phase-Space Spectral Line De-confusion in Intensity Mapping<br>
+          <h5>Phase-Space Spectral Line De-confusion in Intensity Mapping</h5>
           <b>Cheng, Y.-T.</b>, Chang, T.-C., & Bock, J. 2020, ApJ, 901, 142
           (<a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...901..142C/abstract"target="_blank">ADS</a>, 
           <a href="https://arxiv.org/abs/2005.05341"target="_blank">arXiv:2005.05341</a>)<br>
           <br>
-          Optimally Mapping Large-scale Structures with Luminous Sources<br>
+          <h5>Optimally Mapping Large-scale Structures with Luminous Sources</h5>
           <b>Cheng, Y.-T.</b>, de Putter, R., Chang, T.-C., & Doré, O. 2019, ApJ, 877, 86
             (<a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...877...86C/abstract"target="_blank">ADS</a>, 
             <a href="https://arxiv.org/abs/1809.06384"target="_blank">arXiv:1809.06384</a>)<br>
           <br>
-          Spectral Line De-confusion in an Intensity Mapping Survey<br>
+          <h5>Spectral Line De-confusion in an Intensity Mapping Survey</h5>
           <b>Cheng, Y.-T.</b>, Chang, T.-C., Bock, J., Bradford, C. M., & Cooray, A. 2016, ApJ, 832, 165
           (<a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...832..165C/abstract"target="_blank">ADS</a>, 
           <a href="https://arxiv.org/abs/1604.07833"target="_blank">arXiv:1604.07833</a>)<br>
           <br><br>
-          <h3><b>Contributing Author (selected)</b></h3>
-          Superresolution Reconstruction of Severely Undersampled Point-spread Functions Using Point-source Stacking and Deconvolution<br>
-          Symons, T., Zemcov, M., ..., <b>Cheng, Y.-T.</b>, et al. 2021, ApJS, 252, 24 (<a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..252...24S/abstract"target="_blank">ADS</a>, 
-          <a href="https://arxiv.org/abs/2102.01094"target="_blank">arXiv:2102.01094</a>)
-          <br><br>
-          Line-Intensity Mapping: 2017 Status Report<br>
-          Kovetz, E. D., Viero, M. P., Lidz, A., Newburgh, L., Rahman, M., Switzer, E., Kamionkowski, M., ..., <b>Cheng, Y.-T.</b>, et al. 2017 (<a href="https://arxiv.org/abs/1709.09066"target="_blank">arXiv:1709.09066</a>)
-          <br>
-
         </div>
       </div>
     </div>
