--- a/research.html
+++ b/research.html
@@ -38,9 +38,6 @@ Author URL: http://w3layouts.com
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="experiments.html">Experiments</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="research.html">Research</a>
           </li>
             <a class="nav-link" href="publications.html">Publications</a>
@@ -67,10 +64,41 @@ Author URL: http://w3layouts.com
     <div class="container">
       <div class="row">
          <div class="col-lg-10 content-left mt-lg-0 mt-5 pl-lg-5">
-          <p class="mb-0">My research spans a wide range of theoretical and data analysis topics on large-scale structures, extragalactic background light, and line intensity mapping.<br><br>
-            My recent presentation recordings:<br>
-            Apr 2022, ASIAA Seminar, <b>Cosmology and Astrophysics from the Extragalactic Background Light</b> <a href="https://www.youtube.com/watch?v=OFgtop1wmKM"target="_blank">[video]</a><br>
-            Jun 2022, Cosmology from Home, <b>Data-Driven Cosmology from 3D Light Cones</b> <a href="https://www.youtube.com/watch?v=Mx4MZ9Z2gIg"target="_blank">[video]</a><br>
+          <p class="mb-0">
+            <h1><b><p style="color:#0041C2;">Recent Presentations</p></b></h1>
+            <center>
+            <br>
+            <h5><b>Data-Driven Cosmology from 3D Light Cones</b></h5>
+            (July 2022, Cosmology from Home conference)<br>
+            <iframe width="420" height="250"
+            src="https://www.youtube.com/embed/Mx4MZ9Z2gIg">
+            </iframe>
+            <br><br>
+            <h5><b>Cosmology and Astrophysics from the Extragalactic Background Light</b></h5>
+            (May 2022, ASIAA Seminar)<br>
+            <iframe width="420" height="250"
+            src="https://www.youtube.com/embed/OFgtop1wmKM">
+            </iframe>
+            <br>
+            <br>
+            <br>
+          </center>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- </div> -->
+
+
+<!-- w3l-content-photo-5 -->
+<!-- <div class="w3l-content-photo-5 py-5" id="about">
+ -->  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+    <div class="container">
+      <div class="row">
+         <div class="col-lg-10 content-left mt-lg-0 mt-5 pl-lg-5">
+          <p class="mb-0">
+            <h1><b><p style="color:#0041C2;">Research Highlights</p></b></h1>
           </p>
         </div>
       </div>
@@ -84,11 +112,31 @@ Author URL: http://w3layouts.com
     <div class="container">
       <div class="row">
         <div class="col-lg-4 content-photo">
-          <img src="imgs/frac_exsitu.png" class="img-fluid" alt="content-photo"></a>
-          <p style="font-size:10pt">Constraints on the fraction of extended emssion around galaxies from stacking analysis with CIBER.</p>
+          <img src="imgs/SPHEREx_xcorr.png" class="img-fluid" alt="content-photo"></a>
         </div>
-        <div class="col-lg-7 content-left mt-lg-0 mt-5 pl-lg-5">
-          <h3>Probing Intra-Halo Light in the Near-infrared Extragalactic Background Light</h3>
+        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
+          <h4><b>EBL tomography with SPHEREx-galaxy Cross correlations</b></h4>
+          <p class="mb-0"><b>Cheng, Y.-T.</b>, Chang, T.-C., 2022, ApJ, 925, 136
+            (<a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...925..136C/abstract"target="_blank">ADS</a>, 
+            <a href="https://arxiv.org/abs/2109.10914"target="_blank">arXiv:2109.10914</a>)
+            <br><br>  
+            The extragalactic background light (EBL) is the integrated emission from all extragalactic sources along the line of sight. The upcoming NASA satellite mission SPHEREx will perform an ll-sky spectral mapping survey in near infrared (0.75 - 5 um), producing an exceptional dataset for studying the EBL. In this work, we forecast the prospect of constraining the EBL spectral and redshift dependence with SPHEREx using galaxy cross correlations.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- w3l-content-photo-5 -->
+<div class="w3l-content-photo-5 py-5" id="about">
+  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 content-photo">
+          <img src="imgs/frac_exsitu.png" class="img-fluid" alt="content-photo"></a>
+        </div>
+        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
+          <h4><b>Probing Intra-Halo Light in the Near-infrared Extragalactic Background Light</b></h4>
           <p class="mb-0">
             <b>Cheng, Y.-T.</b>, Bock, J. 2022, ApJ submitted
             (<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220713712C/abstract"target="_blank">ADS</a>, 
@@ -97,7 +145,7 @@ Author URL: http://w3layouts.com
             (<a href="https://ui.adsabs.harvard.edu/abs/2021ApJ...919...69C/abstract"target="_blank">ADS</a>, 
             <a href="https://arxiv.org/abs/2103.03882"target="_blank">arXiv:2103.03882</a>)
            <br><br>         
-            Extragalactic Background Light (EBL) is the integrated emission from all extragalactic sources along the line of sight. Previous EBL fluctuation analyses suggest that the intra-halo light (IHL) has a non-negligible contribution to the near-infrared background. IHL is the emission from stars tidally stripped from their parent galaxies which ultimately reside in the surrounding dark matter halo with an extended spatial distribution. In Cheng et al. 2021, we use stacking analysis with CIBER imaging data to contrain the IHL around normal galaxies at 0.2 < z < 0.5. In Cheng & Bock 2022, we use simulations to characterize the dependence of EBL power spectrum on nonlinear clustering scales from satellite galaxies and different IHL models.
+            Previous EBL fluctuation analyses suggest that the intra-halo light (IHL) has a non-negligible contribution to the near-infrared background. IHL is the emission from stars tidally stripped from their parent galaxies which ultimately reside in the surrounding dark matter halo with an extended spatial distribution. In Cheng et al. 2021, we use stacking analysis with CIBER imaging data to contrain the IHL around normal galaxies at 0.2 < z < 0.5. In Cheng & Bock 2022, we use simulations to characterize the dependence of EBL power spectrum on nonlinear clustering scales from satellite galaxies and different IHL models.
 </p>
         </div>
       </div>
@@ -110,12 +158,11 @@ Author URL: http://w3layouts.com
   <div class="content-main pt-lg-5 pt-md-3 pb-0">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 content-photo">
+        <div class="col-lg-4 content-photo">
           <img src="imgs/optobs.png" class="img-fluid" alt="content-photo"></a>
-          <p style="font-size:10pt">The optimal mapping function (red) in GD and IM regime.</p>
         </div>
-        <div class="col-lg-7 content-left mt-lg-0 mt-5 pl-lg-5">
-          <h3>Optimal Mapping Strategy for Large-Scale Structure Survey</h3>
+        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
+          <h4><b>Optimal Mapping Strategy for Large-Scale Structure Survey</b></h4>
           <p class="mb-0"><b>Cheng, Y.-T.</b>, de Putter, R., Chang, T.-C., & Doré, O. 2019, ApJ, 877, 86
             (<a href="https://ui.adsabs.harvard.edu/abs/2019ApJ...877...86C/abstract"target="_blank">ADS</a>, 
             <a href="https://arxiv.org/abs/1809.06384"target="_blank">arXiv:1809.06384</a>)
@@ -134,16 +181,13 @@ Author URL: http://w3layouts.com
       <div class="row">
         <div class="col-lg-4 content-photo">
           <img src="imgs/line_blending.png" class="img-fluid" alt="content-photo"></a>
-          <p style="font-size:10pt">[C II] intensity map at z = 6 will be confused by low-z CO lines at the same observed wavelength.</p>
-          <br><br><br><br><br><br>
+          <br><br><br><br><br><br><br><br><br>
           <img src="imgs/anisotropy.png" class="img-fluid" alt="content-photo"></a>
-          <p style="font-size:10pt">[C II] 2D power spectrum at z = 6 and its CO(3-2) interloper line projected to z = 6. CO(3-2) power spectrum has anisotropic shape due to the projection effect.</p>
-          <br> 
+          <br><br><br><br>
          <img src="imgs/sparse.png" class="img-fluid" alt="content-photo"></a>
-          <p style="font-size:10pt">Redshift-dependent spectral template from sources emitting multiple lines in the observed band in IM.</p> 
         </div>
-        <div class="col-lg-7 content-left mt-lg-0 mt-5 pl-lg-5">
-          <h3>Spectral Line De-blending in Line Intensity Mapping</h3>
+        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-7">
+          <h4><b>Spectral Line De-blending in Line Intensity Mapping</b></h4>
           <p class="mb-0">
             <b>Cheng, Y.-T.</b>, Chang, T.-C., Bock, J., Bradford, C. M., & Cooray, A. 2016, ApJ, 832, 165
             (<a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...832..165C/abstract"target="_blank">ADS</a>, 
@@ -168,6 +212,66 @@ Author URL: http://w3layouts.com
     </div>
   </div>
 </div>
+
+<!-- w3l-content-photo-5 -->
+<!-- <div class="w3l-content-photo-5 py-5" id="about">
+ -->  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+    <div class="container">
+      <div class="row">
+         <div class="col-lg-10 content-left mt-lg-0 mt-5 pl-lg-5">
+          <p class="mb-0">
+            <h1><b><p style="color:#0041C2;">Experiments</p></b></h1>
+            <br>
+          <p class="mb-0">I am a member of the CIBER and TIME collaborations. I work on theoretical modeling, pipeline development, and data analysis for these experiments.</p>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+<div class="w3l-content-photo-5 py-5" id="about">
+  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 content-photo">
+          <img src="imgs/CIBER1.jpg" class="img-fluid" alt="content-photo"></a>
+          <img src="imgs/CIBER2.png" class="img-fluid" alt="content-photo"></a>
+          <p style="font-size:10pt">Top: CIBER 4th flight lauch at Wallops Flight Facility (Crdit: T. Arai). Bottom: CIBER instrument (Zemcov et al. 2013).</p>
+        </div>
+        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-5">
+          <h3>CIBER</h3>
+          <p class="mb-0"><a href="https://ciberrocket.github.io/"target="_blank">CIBER</a> (Cosmic Infrared Background ExpeRiment) was a sounding rocket experiment designed to probe the near-IR Extragalactic Background Light (EBL), the aggregate emission from all sources along the line of sight throughout cosmic time. CIBER has flown four times between 2009 and 2013. <br>
+            <br>
+          My research project with CIBER is to study the “intra-halo light”, the extended emission around galaxies, in near-IR EBL using the 4th flight CIBER imaging data (Cheng et al. 2021). I have also led the end-to-end data analysis pipeline for CIBER imagers.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="w3l-content-photo-5 py-5" id="about">
+  <div class="content-main pt-lg-5 pt-md-3 pb-0">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 content-photo">
+          <img src="imgs/TIME2.png" class="img-fluid" alt="content-photo"></a>
+          <img src="imgs/TIME1.jpg" class="img-fluid" alt="content-photo"></a>
+         <p style="font-size:10pt">Top: TIME grating spectrometer. Bottom: 2019 winter TIME engineering run at Kitt Peak.</p>
+        </div>
+        <div class="col-lg-8 content-left mt-lg-0 mt-5 pl-lg-5">
+          <h3>TIME</h3>
+          <p class="mb-0"><a href="https://ui.adsabs.harvard.edu/abs/2014SPIE.9153E..1WC/abstract"target="_blank">TIME</a> (Tomographic Ionized Carbon Intensity Mapping Experiment) is a mm-wavelength spectrometer designed to conduct [C II] line intensity mapping at redshift 5 to 9. TIME will be deployed on ALMA prototype antenna at Kitt Peak, Arizona. By mapping the large-scale intensity field from the emission of ionized carbon line [C II], TIME will probe the EoR by characterizing the statistical properties of the ionization sources, and will be complementary to the HI 21 cm intensity mapping and the conventional galaxy detection approaches. <br>
+            <br>
+          My work on TIME includes simulating signals and foregrounds for the analysis pipelines, helping with instrument deployment, and analyzing the instrument testing data. In addition, I have also developed two novel techniques to tackle the interloper line foreground in intensity mapping that can be applied to TIME data analysis in the future.</p>
+        </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- </div> -->
 
 
 <!-- //home page service grids -->
