--- a/publications.html
+++ b/publications.html
@@ -72,7 +72,7 @@ Author URL: http://w3layouts.com
           <h3><b>First Author Papers</b></h3>
           <br>
           <h5>Near-infrared Extragalactic Background Light Fluctuations on Nonlinear Scales</h5>
-          <b>Cheng, Y.-T.</b> & Bock, J., 2022, ApJ submitted
+          <b>Cheng, Y.-T.</b> & Bock, J., 2022, ApJ accepted
           (<a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220713712C/abstract"target="_blank">ADS</a>, 
           <a href="https://arxiv.org/abs/2207.13712"target="_blank">arXiv:2207.13712</a>)<br>
           <br>
