--- a/index.html
+++ b/index.html
@@ -77,10 +77,14 @@ Author URL: http://w3layouts.com
  <div class="container py-md-3">
   <div class="heading text-center mx-auto">
     <!-- <h4 class="head">Welcome To My Page!</h4> -->
-    <p class="my-3 head" style="font-size:110%;"> Hello, I am Yun-Ting Cheng (鄭昀庭). I am a postdoctoral researcher at the California Institute of Technology (Caltech) working with <a href="http://olivierdore.net/index.html"target="_blank">Olivier Doré</a> and <a href="https://science.jpl.nasa.gov/people/TChang/"target="_blank">Tzu-Ching Chang</a>. I completed my Ph.D. at Caltech <a href="https://cosmology.caltech.edu/"target="_blank">Observational Cosmology group</a> under the supervision of <a href="https://pma.divisions.caltech.edu/people/james-j-jamie-bock"target="_blank">Jamie Bock</a>.
+
+    <p class="my-3 head" style="font-size:110%;"> Hello, I'm Yun-Ting Cheng (鄭昀庭), a postdoctoral researcher at the Jet Propulsion Laboratory (JPL) and California Institute of Technology (Caltech), working with <a href="http://olivierdore.net/index.html"target="_blank">Olivier Doré</a> and <a href="https://science.jpl.nasa.gov/people/TChang/"target="_blank">Tzu-Ching Chang</a>. I completed my Ph.D. in the <a href="https://cosmology.caltech.edu/"target="_blank">Caltech Observational Cosmology group</a> under the supervision of <a href="https://pma.divisions.caltech.edu/people/james-j-jamie-bock"target="_blank">Jamie Bock</a>.
 
     <br><br>
-    My research focues on building models and developing novel techniques to improve analysis for future LSS/LIM experiments. I have worked on topics including large-scale structures (LSS), extragalactic background light (EBL), intra-halo light (IHL), and line intensity mapping (LIM). I also have data analysis experience with CIBER where I developed the analysis pipeline and study the IHL constraints from CIBER data.
+    My research focuses on extracting cosmological and astrophysical information from large-scale structure surveys. A large part of my work focuses "intensity mapping," which maps the large-scale structure using the entire emission field instead of resolved sources as in conventional redshift surveys. I am interested in optimizing the extraction of desired information from current and future cosmological surveys (such as SPHEREx, Roman, Euclid, LSST, etc.). This involves two primary areas: first, developing novel analysis algorithms to constrain information from intensity mapping datasets, and second, constructing data-informed models to improve cosmological analysis.
+
+    <br><br>
+    My work spans various topics, including the development of data-driven algorithms for intensity mapping data analysis, pipeline construction and data analysis for the CIBER experiment to constrain the intra-halo light signal in the extragalactic background light, as well as the development of foreground mitigation algorithms for line intensity mapping surveys.
 </p>
       
     </div>
@@ -171,10 +175,11 @@ Author URL: http://w3layouts.com
             <div class="heading text-center mx-auto mb-5">
                 <h3 style="text-align:left">Contact</h3>
                 <p class="my-3 head" style="font-size:120%;text-align:left">
-                Email: <a href = "mailto: ycheng3@caltech.edu">ycheng3@caltech.edu</a><br>
+                Email: <a href = "mailto: ycheng3@caltech.edu">ycheng3@caltech.edu</a> / <a href = "mailto: yun-ting.cheng@jpl.nasa.gov">yun-ting.cheng@jpl.nasa.gov</a><br>
                 <br>
-                Office: Room 361, Cahill Center for Astronomy and Astrophysics,
-                1216, E. California Blvd., Pasadena, CA 91125, USA.<br>
+                Office: <br>
+                Caltch - Room 380, Cahill Center for Astronomy and Astrophysics<br>
+                JPL - 169-234<br>
                 <br>
                 Mailing Address: MC 367-17, 1200 E. California Blvd., Pasadena, CA 91125, USA.
             </p>
