--- a/index.html
+++ b/index.html
@@ -77,14 +77,15 @@ Author URL: http://w3layouts.com
  <div class="container py-md-3">
   <div class="heading text-center mx-auto">
     <!-- <h4 class="head">Welcome To My Page!</h4> -->
-
+    <div class="col-lg-12 col-md-8 col-sm-8 skills-bar-grids mb-4 pb-2">
     <p class="my-3 head" style="font-size:110%;"> Hello, I'm Yun-Ting Cheng (鄭昀庭), a postdoctoral researcher at the Jet Propulsion Laboratory (JPL) and California Institute of Technology (Caltech), working with <a href="http://olivierdore.net/index.html"target="_blank">Olivier Doré</a> and <a href="https://science.jpl.nasa.gov/people/TChang/"target="_blank">Tzu-Ching Chang</a>. I completed my Ph.D. in the <a href="https://cosmology.caltech.edu/"target="_blank">Caltech Observational Cosmology group</a> under the supervision of <a href="https://pma.divisions.caltech.edu/people/james-j-jamie-bock"target="_blank">Jamie Bock</a>.
 
     <br><br>
-    My research focuses on extracting cosmological and astrophysical information from large-scale structure surveys. A large part of my work focuses "intensity mapping," which maps the large-scale structure using the entire emission field instead of resolved sources as in conventional redshift surveys. I am interested in optimizing the extraction of desired information from current and future cosmological surveys (such as SPHEREx, Roman, Euclid, LSST, etc.). This involves two primary areas: first, developing novel analysis algorithms to constrain information from intensity mapping datasets, and second, constructing data-informed models to improve cosmological analysis.
+    My research focuses on extracting cosmological and astrophysical information from large-scale structure surveys. A large part of my work focuses on "intensity mapping," which maps the large-scale structure using the full emission field instead of resolved sources as in conventional redshift surveys. I am interested in optimizing the extraction of desired information from current and future cosmological surveys (SPHEREx, Roman, Euclid, etc.) by (1) developing novel analysis algorithms to constrain information from intensity mapping datasets, and (2) constructing data-informed models to improve cosmological analysis.
 
     <br><br>
-    My work spans various topics, including the development of data-driven algorithms for intensity mapping data analysis, pipeline construction and data analysis for the CIBER experiment to constrain the intra-halo light signal in the extragalactic background light, as well as the development of foreground mitigation algorithms for line intensity mapping surveys.
+    My work spans a wide variety of topics in cosmology, including the development of data-driven algorithms for intensity mapping data analysis, pipeline construction and data analysis for the CIBER experiment to constrain the intra-halo light signal in the extragalactic background light, as well as the development of foreground mitigation algorithms for line intensity mapping surveys.
+    </div>
 </p>
       
     </div>
